# cdnbestip

./: .gitignore  README.md  check.py  cloudflare.py  gcore.py  notify.py  pyproject.toml  requirements.txt  run.py
cron/: daycron.sh
cron/include/: cdnbestip.sh
